--- a/objective.yaml
+++ b/objective.yaml
@@ -16,6 +16,25 @@ Enable/Disable the User Access, Display the User Logs, User Access Control, User
 
 7. Improve the HTML file
 
-uuid, using list comprehension, and the random module to generate a list of 10 UUIDs.
+uuid, using list comprehension to generate a list of 10 UUIDs., and the random module 
 
 yt for relationsips - https://www.youtube.com/watch?v=lgiQLBwPmTQ&t=1583s
+
+---OBJECTIVES---
+Tkinter and HTML Beautification
+Admin Page
+Logs DataBase - Make it partially (manual) 
+Permissions Fetched and Validated ✅
+Location Fetched ✅
+Location Validated ✅
+Time Validated
+
+
+---
+In general, the precision of latitude and longitude values can be categorized as follows:
+
+    Country-level precision: 1-2 decimal places (e.g., 37.7° N, 122.4° W)
+    City-level precision: 2-3 decimal places (e.g., 37.774° N, 122.419° W)
+    Street-level precision: 4-5 decimal places (e.g., 37.7743° N, 122.4192° W)
+    Building-level precision: 5-6 decimal places (e.g., 37.77432° N, 122.41923° W)
+    Room-level precision: 7-8 decimal places (e.g., 37.774321° N, 122.419234° W)
